--- a/index.css
+++ b/index.css
@@ -11,3 +11,21 @@ body {
     padding-left: 100px;
     padding-right: 100px;
 }
+
+.profilePic {
+    border-radius: 50%;
+    width: 400px;
+    height: 450px;
+}
+
+photo{
+    border: 1px solid #ddd; /* Gray border */
+    border-radius: 4px;  /* Rounded border */
+    padding: 5px; /* Some padding */
+    width: 150px; /* Set a small width */
+  }
+  
+  /* Add a hover effect (blue shadow) */
+  photo:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  }
