--- a/index.css
+++ b/index.css
@@ -16,16 +16,42 @@ body {
     border-radius: 50%;
     width: 400px;
     height: 450px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-photo{
-    border: 1px solid #ddd; /* Gray border */
-    border-radius: 4px;  /* Rounded border */
-    padding: 5px; /* Some padding */
-    width: 150px; /* Set a small width */
+
+.typing-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.input-cursor {
+    display: inline-block;
+    width: 2px;
+    height: 42px;
+    background-color: white;
+    margin-left: 8px;
+}
+
+@keyframes blink {
+    0% {opacity: 1;}
+    40% {opacity: 1;}
+    60% {opacity: 0;}
+    100% {opacity: 0;}
   }
-  
-  /* Add a hover effect (blue shadow) */
-  photo:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-  }
+
+.input-cursor { 
+  animation: blink .6s linear infinite alternate;
+}
+
+.article {
+    width: 100%;
+    height: 100%;
+}
+
+.articlePhoto {
+    width: 400px;
+    height: 300px;
+}
