--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@ body {
 }
 
 .content {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .profilePic {
